# vital-player

./: .gitignore  README.md  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: m72xnc0rma1kp22g2fw6w88yi2d3phxc-source
src/core/audio/: AudioDecoder.cpp  AudioDecoder.h  AudioFrame.h  AudioPlayer.cpp  AudioPlayer.h  AudioPlayerQMLIntegration.h  AudioPlayerv2.h  Makefile  MyPlayer  main.cpp
src/ui/: AlbumGrid.qml  AlbumGrid.qml.autosave  CMakeLists.txt  CMakeLists.txt.user.71e16d5  CMakeLists.txt.user.80c5691  CMakeLists.txt.user.a4c3c05  CMakeLists.txt.user.cae83e2  MediaBar.qml  main.cpp  settings.json
src/ui/.qtcreator/: CMakeLists.txt.user.b7dd136
